<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/math_operations"
        android:layout_width="231dp"
        android:layout_height="39dp"
        android:text="@string/math_operation_text_view"
        android:textAlignment="center"
        android:textColor="#6200ED"
        android:textSize="20sp"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <EditText
        android:id="@+id/first_number_edit_text"
        android:layout_width="236dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_number_edit_text"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/math_operations"
        app:layout_constraintStart_toStartOf="@+id/math_operations"
        app:layout_constraintTop_toBottomOf="@+id/math_operations"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/second_number_edit_text"
        android:layout_width="233dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/second_number_edit_text"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/first_number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/first_number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/first_number_edit_text"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/addition_text_view"
        android:hint="@string/addition_text_view"
        android:layout_width="228dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/second_number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/second_number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/second_number_edit_text" />

    <TextView
        android:id="@+id/subtract_text_view"
        android:hint="@string/subtract_text_view"
        android:layout_width="228dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/addition_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addition_text_view"
        app:layout_constraintTop_toBottomOf="@+id/addition_text_view" />

    <TextView
        android:id="@+id/product_text_view"
        android:hint="@string/product_text_view"
        android:layout_width="228dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/subtract_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/subtract_text_view"
        app:layout_constraintTop_toBottomOf="@+id/subtract_text_view" />

    <TextView
        android:id="@+id/divide_text_view"
        android:hint="@string/divide_text_view"
        android:layout_width="228dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/product_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_text_view"
        app:layout_constraintTop_toBottomOf="@+id/product_text_view" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/calculate_button"
        app:layout_constraintEnd_toEndOf="@+id/divide_text_view"
        app:layout_constraintStart_toStartOf="@+id/divide_text_view"
        app:layout_constraintTop_toBottomOf="@+id/divide_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>